--- a/partials/_header.html
+++ b/partials/_header.html
@@ -5,14 +5,13 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="msapplication-TileColor" content="#73c5d3"/>
-  <meta name="msapplication-TileImage" content="sbx_144x144.png"/>
+  <title>GimmeBrowser</title>
+  <meta name="viewport" content="width=320.1,initial-scale=1.0">
   <link rel="stylesheet" href="css/base.css">
-
-  <!-- This should be replaced with a minified production build of Modernizr -->
-  <script src="js/libs/modernizr.min.js"></script>
+  <link rel="apple-touch-icon" href="apple-touch-icon-144x144.png"/>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="GimmeBrowser">
+  <meta name="author" content="Adam Simpson">
+  <meta name="description" content="A fast, light-weight Gimmebar browser optimized for small screens.">
 </head>
 <body>
