--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -3,22 +3,56 @@
   width: device-width;
 }
 
-/*
-Examples
-
-Breakpoint - Non-media query browsers DO get styles inside media query:
-.hero{
-  color: red;
-  @include breakpoint(14.5em, $no-query:$nomq){
-    color: blue;
-  }
+img{
+  width: 100%;
 }
 
-Breakpoint - Non-media query browsers do NOT get styles inside media query:
-.hero{
-  color: red;
-  @include breakpoint(14.5em){
-    color: blue;
-  }
+h1{
+  color: $pink;
+  text-align: center;
 }
-*/
+
+input{
+  width: 100%;
+  display: block;
+  @include rem("margin-top", .5);
+}
+
+input[type="text"]{
+  width: 98%;
+}
+
+input[type="submit"]{
+  display: block;
+  color:$pink;
+  @include rem("margin", 1, 0, 1, 0);
+  text-align: center;
+  background-color: transparent;
+  text-decoration: underline;
+  pointer:cursor;
+  border:none;
+}
+
+#gimmeForm{
+  display: block;
+  width: 90%;
+  margin: 0 auto;
+}
+
+header{
+  width: 90%;
+  margin: 0 auto;
+}
+
+.img-module, .text-module{
+  width: 90%;
+  margin: 0 auto;
+  @include rem("margin-top", 1);
+}
+
+.more{
+  display: block;
+  color:$pink;
+  @include rem("margin", 1, 0, 1, 0);
+  text-align: center;
+}
