--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,4 +7,4 @@ $breakpoint-no-query-wrappers: true;
 $nomq: ".lt-ie9 &, .no-mq";
 $hi-res: "@media (-webkit-min-device-pixel-ratio: 1.5, only screen) and (-o-min-device-pixel-ratio: 3/2, only screen) and (min-device-pixel-ratio: 1.5)";
 
-// Font Families
+$pink:#d6156c;
