cleaned up coffeescript a bit, tweaked app frame for iOS

--- a/partials/_header.html
+++ b/partials/_header.html
@@ -6,9 +6,9 @@
 <head>
   <meta charset="utf-8">
   <title>GimmeBrowser</title>
-  <meta name="viewport" content="width=320.1,initial-scale=1.0">
+  <meta name="viewport" content="initial-scale=1.0">
   <link rel="stylesheet" href="css/base.css">
-  <link rel="apple-touch-icon" href="apple-touch-icon-144x144.png"/>
+  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-144x144.png"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="GimmeBrowser">
   <meta name="author" content="Adam Simpson">
