--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -1,6 +1,12 @@
 /* Windows Metro Snap mode fix */
-@-ms-viewport{
-  width: device-width;
+@-webkit-viewport{width:device-width;}
+@-moz-viewport{width:device-width;}
+@-ms-viewport{width:device-width;}
+@-o-viewport{width:device-width;}
+@viewport{width:device-width;}
+
+body{
+  overflow-x:hidden;
 }
 
 img{
