started working on collection filter

--- a/partials/_index.html
+++ b/partials/_index.html
@@ -4,6 +4,7 @@
 <div class="wrapper">
 <form action="#" id="gimmeForm">
   <input class="gimmeUser" placeholder="username" type="text">
+  <input class="gimmeCollection" placeholder="collection" type="text">
   <input type="submit" value="Go">
 </form>
 <div class="content">
